- Completing Inventory system
